[gd_scene load_steps=7 format=3 uid="uid://copyv3fb6t7c5"]

[ext_resource type="Script" path="res://escenas/gem_scene/gem_Scene.gd" id="1_aehs3"]
[ext_resource type="Texture2D" uid="uid://di12nqmr2oo4g" path="res://assets/coins-chests-etc-2-0-noborders.png" id="1_r0td8"]
[ext_resource type="AudioStream" uid="uid://dwlc7qgwpbbu7" path="res://assets/sound/sfx/coin.wav" id="3_v5778"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cs3q1"]
bounce = 0.3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_id8ot"]
size = Vector2(11, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5fgd"]
size = Vector2(15, 17)

[node name="Geme" type="RigidBody2D"]
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_cs3q1")
script = ExtResource("1_aehs3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_id8ot")

[node name="Area2D" type="Area2D" parent="."]

[node name="Area2D_CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_y5fgd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.5, -0.5)
scale = Vector2(1.08333, 1.07143)
texture = ExtResource("1_r0td8")
region_enabled = true
region_rect = Rect2(225.942, 369.782, 12.7023, 14.9995)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v5778")
volume_db = -20.0
pitch_scale = 1.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
